--- a/mycss.css
+++ b/mycss.css
@@ -1,3 +1,193 @@
-h1 {
-	color:pink;
-}
+        * {
+            box-sizing: border-box;
+        }
+        body {
+            color: #878787;
+            margin: 0;
+            font-family: sans-serif;
+            text-align: center;
+        }
+
+        img {
+            max-width: 100%;
+        }
+
+        a {
+            text-decoration: none;
+        }
+
+        .nav-header {
+            height: 100px;
+            background: #f0f5f5;
+            display: flex;
+        }
+
+        .nav-div {
+            margin: auto;
+        }
+
+        .logo-img {
+            width: 120px;
+            margin-left: 20px;
+        }
+
+        .search-icon {
+            margin: 30px;
+        }
+
+        .nav-bar {
+            list-style-type: none;
+        }
+
+        .nav-bar-list {
+            display: inline-block;
+        }
+
+        .nav-bar-link {
+            color: #878787;
+            font-size: 24px;
+            padding: 20px;
+        }
+
+
+        }
+
+        .main-header-title {
+            margin-top: 0;
+            padding-top: 30px;
+            text-align: left;
+            font-size: 2.5em;
+            color: #f7f8f9;
+            text-transform: uppercase;
+            font-weight: normal;
+            padding-left: 75px;
+            text-shadow: 3px 2px grey;
+        }
+
+        .main-header-intro {
+            line-height: 1.5em;
+            width: 50%;
+            margin: auto;
+            padding: 40px;
+            color: white;
+            text-align: justify;
+        }
+
+        .intro {
+            width: 60%;
+            margin: auto;
+        }
+
+        .button {
+            display: block;
+            background: #9dcc51;
+            color: white;
+            padding: 15px;
+            font-size: 24px;
+            width: 160px;
+            margin: auto;
+            text-decoration: none;
+            margin-top: 20px;
+            box-shadow: 2px 2px 2px #888888;
+        }
+
+        .box {
+            display: flex;
+            width: 80%;
+            margin: auto;
+        }
+
+        .card {
+            width: 100%;
+            padding: 20px;
+            text-align: left;
+            border: 1px grey solid;
+            margin: 20px;
+            margin-top: 40px;
+            border-radius: 5px;
+            background: #f0f5f5;
+            box-shadow: 5px 5px 5px #888888;
+        }
+
+        .footer {
+            height: 40px;
+            background: #f0f5f5;
+            padding: 5px;
+        }
+
+
+        a:hover {
+            color: green;
+        }
+
+
+        @media only screen and (max-width: 600px) {
+            body {
+                background-color: lightblue;
+            }
+            
+            .nav-header {
+                display:flex;
+                flex-direction: column;
+                background: white;
+                align-items: center;
+                margin-bottom:160px;
+                padding:0px;
+            }
+
+            .nav-bar {
+                display: flex;
+                flex-direction: column;
+                background-color: #c2c2c2;
+
+            }
+
+            .box { 
+            display:flex; 
+            flex-direction: column;
+
+            }
+            .main-header-intro{  
+                display:flex;
+                padding:10px;
+                
+            }
+            
+        
+        }
+
+        @media only screen and (min-width: 601px) {
+            body {
+                background-color: white;
+            }
+            .box {
+                display:flex;
+                flex-direction:row;
+                justify-content:center;
+                 }
+        
+        }   
+
+
+            <div class="nav-header">
+        <div class="nav-div">
+            <ul class="nav-bar">
+                <li class="nav-bar-list"><a class="nav-bar-link" href="index.html">Home</a></li>
+                <li class="nav-bar-list"><a class="nav-bar-link" href="Styles.html">Nail Styles</a></li>
+                <li class="nav-bar-list"><a class="nav-bar-link" href="contactus.html">Contact Us</a></li>
+            </ul>
+        </div>
+        <div class="search-icon">
+            <i class="fa fa-search fa-2x" aria-hidden="true"></i>
+        </div>
+    </div>
+     <h1 class="main-header-title">Pressed Kouture</h1>    
+     
+      <h3> A website created to share highly sought after press-ons </h3>
+      <div clas="box">
+      <div class="card">
+
+      
+     
+      <div class="card">
+     
