--- a/mycss4.css
+++ b/mycss4.css
@@ -118,6 +118,7 @@
             border-radius: 5px;
             background: #f0f5f5;
             box-shadow: 5px 5px 5px pink;
+            background-color:#ECE6E7;
         }
 
         .footer {
@@ -139,20 +140,21 @@
             
             .nav-header {
                 display:flex;
-                flex-direction: column;
+                flex-direction: row;
                 background: white;
                 align-items: center;
                 margin-bottom:160px;
                 padding:0px;
+
             }
 
             .nav-bar {
                 display: flex;
-                flex-direction: column;
+                flex-direction: row;
                 background-color: lightpink;
                 padding-left:20px;
                 margin-top:2px;
-                height:96%;
+                height:98%;
 
             }
 
