--- a/mycss.css
+++ b/mycss.css
@@ -28,6 +28,15 @@
             margin: auto;
         }
 
+        .navbar-toggle {
+         position: absolute;
+        top: 10px;
+        right: 20px;
+        cursor: pointer; 
+        color: #878787;
+        font-size: 30px;
+        }
+
         .search-icon {
             margin: 30px;
             color:grey;
@@ -68,7 +77,7 @@
         .main-header-intro {
             line-height: 1.5em;
             width: 50%;
-            margin: auto;
+            margin:auto;
             padding: 100px;
             color: black;
             text-align: justify;
