--- a/mycss5.css
+++ b/mycss5.css
@@ -22,10 +22,21 @@
                 position:relative;
             }
 
-
-
         nav {
+            margin:auto;
+            display:inline-block;
+        }
+
+        .nav-bar {
             float: right;
+            display:flex;
+            flex-direction: row;
+            background-color: lightpink;
+            height:20px;
+            margin-top:0px;
+            margin-bottom:5px;            
+            padding-top:0px;
+            padding-bottom: 50px;
         }
 
 
@@ -117,6 +128,11 @@
         @media only screen and (min-width: 601px) {
             body {
                 background-color: pink;
+            }
+
+            nav {
+                padding-bottom:0px;
+                margin-bottom:0px;
             }
             .box {
                 display:flex;
