--- a/mycss1.css
+++ b/mycss1.css
@@ -34,11 +34,6 @@
             margin: auto;
         }
 
-        .search-icon {
-            margin: 30px;
-            color:grey;
-        }
-
         .nav-bar {
             list-style-type: none;
         }
@@ -53,10 +48,10 @@
             padding: 20px;
         }
 
-        
-           
+       
+
         .main-header-title {
-            margin-top: 20px;
+            margin-top: 0;
             padding-top: 30px;
             text-align: left;
             font-size: 2.5em;
@@ -68,15 +63,27 @@
         }
 
         .main-header-intro {
-            text-align: left;
             line-height: 1.5em;
             width: 50%;
             margin:auto;
-            color: #e60077;
+            padding: 100px;
+            color: black;
+            text-align: justify;
             font-weight: bold;
-            font-size: 20px;
-            padding-top:0px;
-            padding-bottom:0px;
+            font-size:15px;
+        }
+
+        header {
+                display: inline-block;
+                width:100%;
+                padding:25px 80px;
+                background-color:lightpink;
+                position:relative;
+            }
+
+        nav {
+            margin:auto;
+            display:inline-block;
         }
 
         .intro {
@@ -132,6 +139,7 @@
         }
             
         
+       
        @media only screen and (max-width: 600px) {
             body {
                 background-color: pink;
@@ -144,6 +152,8 @@
                 align-items: center;
                 margin-bottom:160px;
                 padding:0px;
+                 width:100%;
+
             }
 
             .nav-bar {
@@ -151,8 +161,10 @@
                 flex-direction: column;
                 background-color: lightpink;
                 padding-left:20px;
-                margin-top:2px;
+                margin-top:0px;
                 height:96%;
+                width:500px;
+
 
             }
 
@@ -161,25 +173,19 @@
             flex-direction:column;
 
             }
-           
-            
-        
-        
 
         @media only screen and (min-width: 601px) {
             body {
                 background-color: pink;
             }
 
+            nav{
+                padding-bottom:0px;
+                margin-bottom:0px;
             }
             .box {
                 display:flex;
-                flex-direction:column;
+                flex-direction:row;
                 justify-content:center;
                  }
-        
-        }   
-          
-
-       
-   
+            }
