--- a/mycss5.css
+++ b/mycss5.css
@@ -54,26 +54,6 @@
                
         }
 
-
-        .toggle-btn {
-                width: 35px;
-                position: absolute;
-                right: 80px;
-                top: 40px;
-                display: none;
-                background-color:#DA1F90;
-                margin-top:10px;
-
-        }
-
-        .toggle-btn span {
-            display: inline-block;
-            width: 100%;
-            height: 2px;
-            background-color: #000;
-            float: left;
-            margin-bottom: 8px;
-        }
            
         .main-header-title {
             margin-top: 20px;
@@ -99,38 +79,38 @@
             body {
                 background-color: pink;
             }
-            .toggle-btn { 
-            display:block;
-             }
-
-            nav {
-                display: none;
-                width: 100%;
-                border-top: 1px solid #0000;
-                padding-top: 20px;
-                margin-top: 30px;
-
-            }
-
-            nav-bar-list {
-                padding:15px 0px;
-                width:100%;
-
-            }
-            nav.show {
-                display:block;
-            }
             
+            .nav-header {
+                display:flex;
+                flex-direction: column;
+                background: white;
+                align-items: center;
+                margin-bottom:160px;
+                padding:0px;
+            }
+
+            .nav-bar {
+                display: flex;
+                flex-direction: column;
+                background-color: lightpink;
+                padding-left:20px;
+                margin-top:2px;
+                height:96%;
 
             }
-        
+
+            .box { 
+            display:flex; 
+            flex-direction:column;
+
+            }
 
         @media only screen and (min-width: 601px) {
             body {
                 background-color: pink;
             }
 
-            nav {
+            nav{
                 padding-bottom:0px;
                 margin-bottom:0px;
             }
