--- a/mycss.css
+++ b/mycss.css
@@ -154,4 +154,7 @@
                 justify-content:center;
                  }
             }
+            a:hover {
+            color: pink;
+        }
       
