--- a/mycss1.css
+++ b/mycss1.css
@@ -1,15 +1,13 @@
 
-        * {
+* {
             box-sizing: border-box;
         }
+
         body {
-            color:#DA1F90;
-            margin: auto;
+            color:pink;
+            margin: 0;
             font-family: serif;
             text-align: center;
-            background: url("imgs/pinkbox.jpg") no-repeat center;
-            background-size: cover;
-
         }
 
         img {
@@ -18,10 +16,6 @@
 
         a {
             text-decoration: none;
-        }
-
-        h2{
-            color:black;
         }
 
         .nav-header {
@@ -48,7 +42,11 @@
             padding: 20px;
         }
 
-       
+        .main-header {
+            height: 300px;
+            background: url("imgs/pinkbox.jpg") no-repeat center;
+            background-size: cover;
+        }
 
         .main-header-title {
             margin-top: 0;
@@ -73,17 +71,94 @@
             font-size:15px;
         }
 
-        header {
-                display: inline-block;
-                width:100%;
-                padding:25px 80px;
-                background-color:lightpink;
-                position:relative;
+        .intro {
+            width: 60%;
+            margin: auto;
+        }
+
+        .box {
+            display: flex;
+            width: 80%;
+            margin: auto;
+        }
+
+        .card {
+            width: 100%;
+            padding: 20px;
+            text-align: left;
+            border: 2px pink solid;
+            margin: 20px;
+            margin-top: 40px;
+            border-radius: 5px;
+            background: #f0f5f5;
+            box-shadow: 5px 5px 5px ;
+        }
+
+        .footer {
+            height: 40px;
+            background: #f0f5f5;
+            padding: 5px;
+        }
+
+
+        a:hover {
+            color: pink;
+        }
+
+
+        @media only screen and (max-width: 600px) {
+            body {
+                background-color: pink;
+            }
+            
+            .nav-header {
+                display:flex;
+                flex-direction: column;
+                background: white;
+                align-items: center;
+                margin-bottom:10px;
+                padding:0px;
             }
 
-        nav {
-            margin:auto;
-            display:inline-block;
+            .nav-bar {
+                display: flex;
+                flex-direction: column;
+                background-color: lightpink;
+                padding-left:20px;
+                margin-top:2px;
+                height:96%;
+                margin-bottom: 0px;
+
+            }
+
+            .box { 
+            display:flex; 
+            flex-direction: column;
+
+            }
+            .main-header-intro{  
+                display:flex;
+                padding:10px;
+              }
+
+            }
+        
+
+        @media only screen and (min-width: 601px) {
+            body {
+                background-color: pink;
+            }
+            .box {
+                display:flex;
+                flex-direction:row;
+                justify-content:center;
+                 }
+            }
+
+
+
+
+      {display:inline-block;
         }
 
         .intro {
