--- a/mycss2.css
+++ b/mycss2.css
@@ -4,7 +4,7 @@
         }
 
         body {
-            color:black;
+            color:pink;
             margin: 0;
             font-family: serif;
             text-align: center;
@@ -31,6 +31,38 @@
             list-style-type: none;
             flex-direction: row;
         }
+* {
+            box-sizing: border-box;
+        }
+
+        body {
+            color:black;
+            margin: 0;
+            font-family: serif;
+            text-align: center;
+        }
+
+        img {
+            max-width: 100%;
+        }
+
+        a {
+            text-decoration: none;
+        }
+
+        .nav-header {
+            height: 100px;
+            background: lightpink;
+            display: flex;
+        }
+
+        .nav-div {
+            margin: auto;
+        }
+
+        .nav-bar {
+            list-style-type: none;
+        }
 
         .nav-bar-list {
             display: inline-block;
@@ -42,65 +74,9 @@
             padding: 20px;
         }
 
-       
-
-        .main-header-title {
-            margin-top: 0;
-            padding-top: 30px;
-            text-align: left;
-            font-size: 2.5em;
-            color:#DA1F90;
-            text-transform: uppercase;
-            font-weight: bold;
-            padding-left: 75px;
-            text-shadow: 3px 2px grey;
-        }
-
-        .main-header-intro {
-            line-height: 1.5em;
-            width: 50%;
-            margin:auto;
-            padding: 100px;
-            color: black;
-            text-align: justify;
-            font-weight: bold;
-            font-size:15px;
-        }
-
-
-        header {
-                display: inline-block;
-                width:100%;
-                padding:25px 80px;
-                background-color:lightpink;
-                position:relative;
-            }
-
-        nav {
-            margin:auto;
-            display:inline-block;
-        }
-
-       
-
-
-        nav ul li {
-                display:inline-block;
-                padding:15px 25px;
-            }
-
-            
-        nav ul li a {  
-                text-decoration: none;
-                display: inline-block;
-                 color: #878787;
-                font-size: 24px;
-               
-        }
-
         .main-header {
             height: 300px;
-            background: url("imgs/pinkbox.jpg") no-repeat center; 
+            background: url("imgs/pinkbox.jpg") no-repeat center;
             background-size: cover;
         }
 
@@ -119,7 +95,7 @@
         .main-header-intro {
             line-height: 1.5em;
             width: 50%;
-            margin: auto;
+            margin:auto;
             padding: 100px;
             color: black;
             text-align: justify;
@@ -147,7 +123,7 @@
             margin-top: 40px;
             border-radius: 5px;
             background: #f0f5f5;
-            box-shadow: 5px 5px 5px pink;
+            box-shadow: 5px 5px 5px ;
         }
 
         .footer {
@@ -158,7 +134,7 @@
 
 
         a:hover {
-            color: green;
+            color: pink;
         }
 
 
@@ -210,6 +186,6 @@
                 justify-content:center;
                  }
             }
+      
+
         
-       
-       
