--- a/mycss5.css
+++ b/mycss5.css
@@ -2,61 +2,54 @@
         * {
             box-sizing: border-box;
         }
+
         body {
-            color:#DA1F90;
-            margin: auto;
+            color:pink;
+            margin: 0;
             font-family: serif;
             text-align: center;
-            background-color:lightpink;
-            background-size: 50%;
-            justify-content:center;
-
         }
 
+        img {
+            max-width: 100%;
+        }
 
-        header {
-                display: inline-block;
-                width:100%;
-                padding:25px 80px;
-                background-color:lightpink;
-                position:relative;
-            }
+        a {
+            text-decoration: none;
+        }
 
-        nav {
-            margin:auto;
-            display:inline-block;
+        .nav-header {
+            height: 100px;
+            background: lightpink;
+            display: flex;
+        }
+
+        .nav-div {
+            margin: auto;
         }
 
         .nav-bar {
-            float: right;
-            display:flex;
-            flex-direction: row;
-            background-color: lightpink;
-            height:20px;
-            margin-top:0px;
-            margin-bottom:5px;            
-            padding-top:0px;
-            padding-bottom: 50px;
+            list-style-type: none;
         }
 
-
-        nav ul li {
-                display:inline-block;
-                padding:15px 25px;
-            }
-
-            
-        nav ul li a {  
-                text-decoration: none;
-                display: inline-block;
-                 color: #878787;
-                font-size: 24px;
-               
+        .nav-bar-list {
+            display: inline-block;
         }
 
-           
+        .nav-bar-link {
+            color: #878787;
+            font-size: 24px;
+            padding: 20px;
+        }
+
+        .main-header {
+            height: 300px;
+            background: url("imgs/pinkbox.jpg") no-repeat center;
+            background-size: cover;
+        }
+
         .main-header-title {
-            margin-top: 20px;
+            margin-top: 0;
             padding-top: 30px;
             text-align: left;
             font-size: 2.5em;
@@ -67,15 +60,53 @@
             text-shadow: 3px 2px grey;
         }
 
+        .main-header-intro {
+            line-height: 1.5em;
+            width: 50%;
+            margin:auto;
+            padding: 100px;
+            color: black;
+            text-align: justify;
+            font-weight: bold;
+            font-size:15px;
+        }
 
-          .footer {
+        .intro {
+            width: 60%;
+            margin: auto;
+        }
+
+        .box {
+            display: flex;
+            width: 80%;
+            margin: auto;
+        }
+
+        .card {
+            width: 100%;
+            padding: 20px;
+            text-align: left;
+            border: 2px pink solid;
+            margin: 20px;
+            margin-top: 40px;
+            border-radius: 5px;
+            background: #f0f5f5;
+            box-shadow: 5px 5px 5px ;
+        }
+
+        .footer {
             height: 40px;
             background: #f0f5f5;
             padding: 5px;
         }
-            
-        
-       @media only screen and (max-width: 600px) {
+
+
+        a:hover {
+            color: pink;
+        }
+
+
+        @media only screen and (max-width: 600px) {
             body {
                 background-color: pink;
             }
@@ -85,7 +116,7 @@
                 flex-direction: column;
                 background: white;
                 align-items: center;
-                margin-bottom:160px;
+                margin-bottom:10px;
                 padding:0px;
             }
 
@@ -96,23 +127,26 @@
                 padding-left:20px;
                 margin-top:2px;
                 height:96%;
+                margin-bottom: 0px;
 
             }
 
             .box { 
             display:flex; 
-            flex-direction:column;
+            flex-direction: column;
 
             }
+            .main-header-intro{  
+                display:flex;
+                padding:10px;
+              }
+
+            }
+        
 
         @media only screen and (min-width: 601px) {
             body {
                 background-color: pink;
-            }
-
-            nav{
-                padding-bottom:0px;
-                margin-bottom:0px;
             }
             .box {
                 display:flex;
@@ -120,6 +154,4 @@
                 justify-content:center;
                  }
             }
-
-       
-    
+      
