--- a/mycss2.css
+++ b/mycss2.css
@@ -4,7 +4,7 @@
         }
 
         body {
-            color:#F73FBC;
+            color:#F054AB;
             margin: 0;
             font-family: serif;
             text-align: center;
