--- a/mycss5.css
+++ b/mycss5.css
@@ -4,7 +4,7 @@
         }
 
         body {
-            color:#F73FBC;
+            color:#F054AB;
             margin: 0;
             font-family: serif;
             text-align: center;
@@ -98,6 +98,7 @@
             height: 40px;
             background: #f0f5f5;
             padding: 5px;
+
         }
 
 
